# agent-playground

./: .env.example  .gitignore  .pre-commit-config.yaml  HUMAN_IN_THE_LOOP.md  LICENSE  Makefile  README.md  README_new.md  RUNNING.md  implementation_plan.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  test_reorganization_summary.md  workflow_diagram.md
.devcontainer/: devcontainer.json
docs/: README.md  cli-reference.md  framework-overview.md  quickstart.md  workflow-templates.md
docs/api/: README.md
docs/api/core/: agent-config.md  base-agent.md  base-state.md
docs/api/workflows/: workflow.md
docs/examples/: README.md
docs/tutorials/: README.md  custom-agents.md  state-management.md  workflow-building.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
my-agent-project/: .env.example  README.md  main.py
python-coding-curriculum/: README.md  curriculum-outline.md
python-coding-curriculum/exercises/: lesson-01-exercises.md
python-coding-curriculum/lessons/: lesson-01-introduction-to-coding.md
python-coding-curriculum/resources/: command-line-reference.md
source_of_wealth_agent/: LANGGRAPH.md  graph_standalone.py  langgraph.json  requirements.txt
source_of_wealth_agent/agents/: corroboration_agents.py  financial_reports_agent.py  human_advisory_agent.py  id_verification_agent.py  payslip_verification_agent.py  report_generation_agent.py  risk_assessment_agent.py  summarization_agent.py  web_references_agent.py
source_of_wealth_agent/core/: mocked_model.py  models.py  state.py
source_of_wealth_agent/core/mock_results/: README.md  __init__.py  agent_integration_example.py  agent_mock_implementation.py  example_usage.py  financial_reports_results.py  id_verification_results.py  payslip_verification_results.py  test_example.py  web_references_results.py
source_of_wealth_agent/workflow/: orchestration.py  runner.py  tracing.py  visualization.py
src/agent_playground/: __init__.py  cli.py
src/agent_playground/core/: __init__.py  base.py  registry.py
src/agent_playground/sow/: __init__.py  cli.py  cli_new.py  state.py  workflow.py
src/agent_playground/sow/agents/: __init__.py  financial_reports.py  human_advisory.py  id_verification.py  payslip_verification.py  report_generation.py  risk_assessment.py  web_references.py
src/agent_playground/utils/: __init__.py  config.py  logging.py
src/agent_playground/workflows/: __init__.py  builder.py  cli.py  examples.py  monitor.py  templates.py  visualization.py
tests/: basic_test.py  conftest.py  run_tests.py  test_agent.py  test_agents.py  test_components.py  test_direct.py  test_end_to_end.py  test_human_review.py  test_simplified_workflow.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_core.py
